fix: make language tag for pre code visible

--- a/static/css/blog-galeo-me.css
+++ b/static/css/blog-galeo-me.css
@@ -485,17 +485,20 @@ pre.example {
   position: relative;
   overflow: auto;
   display: block;
-  padding-top: 1.2em;
+  padding-top: 1.4em;
 }
 
 pre.src:before {
+  font-size: .9em;
+  line-height: 1em;
   position: absolute;
-  top: -10px;
-  right: 10px;
+  top: 4px;
+  right: 4px;
   display: none;
   padding: 3px;
-  border: 1px solid black;
+  border: 1px solid #aaa;
   background-color: white;
+  color: #139;
 }
 
 pre.src:hover:before {
